--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -44,13 +44,16 @@ pipeline {
       }
     }
 
-    stage('Upload') {
-        steps {
-            echo 'Deploying to AWS s3 bucket.'
-            withAWS(region:'ap-southeast-2',credentials:'9f5a5bbb-f9c9-45ff-abcc-45157ed47fcc') {
-              'sh 'aws s3 sync $repo_path s3://houzezapp-skye1016/ --exclude "$exclude_file"'
+    stage('Production') {
+  steps {
+    withAWS(region:"$region",credentials:"$aws_credential") {
+      sh 'aws s3 sync $repo_path s3://houzezapp-skye1016/ --exclude "$exclude_file"'
+      
+//     s3Delete(bucket: "${bucket}", path:'**/*')
+//     s3Upload(bucket: "${bucket}", includePathPattern:'**/*');
+//     s3Upload(bucket: "${bucket}", workingDir:'targetDir', includePathPattern:'**/*');
             }
-        };
+          }
+        }
     }
-  }    
 }
