--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -2,7 +2,8 @@ pipeline {
   agent any
   tools {nodejs "node16.17"}
   environment {
-    S3bucket_name = 'houzezapp-skye1016'
+    S3bucket_name = 'skye20221020tf'
+    repo_path = '/var/lib/jenkins/workspace/Test_module/out'
   }
   stages {
   stage('SonarCloud') {
@@ -46,7 +47,7 @@ pipeline {
         steps {
             echo 'Deploying to AWS s3 bucket.'
             withAWS(region:'ap-southeast-2',credentials:'9f5a5bbb-f9c9-45ff-abcc-45157ed47fcc') {
-                sh 'aws s3 sync /var/lib/jenkins/workspace/skyefront1007 s3://houzezapp-skye1016/ --exclude "node_modules/*"'
+                sh 'aws s3 sync $repo_path s3://skye20221020tf/'
             }
         };
     }
