--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -18,6 +18,7 @@ pipeline {
         -Dsonar.java.binaries=build/classes/java/ \
         -Dsonar.projectKey=$PROJECT_NAME \
         -Dsonar.sources=.'''
+        sonar.exclusions = ./package-lock.json
          }
         }
       }
