--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         sh '''$SCANNER_HOME/bin/sonar-scanner -Dsonar.organization=$ORGANIZATION \
         -Dsonar.java.binaries=build/classes/java/ \
         -Dsonar.projectKey=$PROJECT_NAME \
-        -Dsonar.sources=.
+        sonar.sources=.
         sonar.exclusions = ./package-lock.json'''
          }
         }
