--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -17,8 +17,8 @@ pipeline {
         sh '''$SCANNER_HOME/bin/sonar-scanner -Dsonar.organization=$ORGANIZATION \
         -Dsonar.java.binaries=build/classes/java/ \
         -Dsonar.projectKey=$PROJECT_NAME \
-        -Dsonar.sources=.
-        -Dsonar.skippedModules=/package-lock.json'''
+        -Dsonar.exclusions=**/package-lock.json/**\
+        -Dsonar.sources=.'''
          }
         }
       }
