--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ jobs:
   displayName: Build and Deploy Job
   condition: or(eq(variables['Build.Reason'], 'Manual'),or(eq(variables['Build.Reason'], 'PullRequest'),eq(variables['Build.Reason'], 'IndividualCI')))
   pool:
-    vmImage: ip-172-31-20-31
+    name: ip-172-31-20-31
   variables:
   - group: Azure-Static-Web-Apps-red-sky-064630800-variable-group
   steps:
