--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,14 @@
-name: Azure Static web apps CICD
+name: Azure Static Web Apps CI/CD
 
 pr:
- branches:
-   include:
-     - master
+  branches:
+    include:
+      - master
 trigger:
- branches:
-   include:
-     - master
+  branches:
+    include:
+      - master
+
 variables:
   CYPRESS_CACHE_FOLDER: ".cache"
 
@@ -17,11 +18,17 @@ jobs:
   condition: or(eq(variables['Build.Reason'], 'Manual'),or(eq(variables['Build.Reason'], 'PullRequest'),eq(variables['Build.Reason'], 'IndividualCI')))
   pool:
     name: default
-  
+  variables:
+  - group: Azure-Static-Web-Apps-red-sky-064630800-variable-group
   steps:
   - checkout: self
     submodules: true
   - task: AzureStaticWebApp@0
     inputs:
-      app_location: '/'
-      output_location: 'dist'
+      azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APPS_API_TOKEN_RED_SKY_064630800)
+###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
+# For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
+      app_location: "/" # App source code path
+      api_location: "" # Api source code path - optional
+      output_location: "dist" # Built app content directory - optional
+###### End of Repository/Build Configurations ######
