--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,8 @@ jobs:
   displayName: Build and Deploy Job
   condition: or(eq(variables['Build.Reason'], 'Manual'),or(eq(variables['Build.Reason'], 'PullRequest'),eq(variables['Build.Reason'], 'IndividualCI')))
   pool:
-    name: default
+    name: Azure Pipelines
+    vmImage: ubuntu-latest
   variables:
   - group: Azure-Static-Web-Apps-red-sky-064630800-variable-group
   steps:
